--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.scss"
+              "src/styles/app.scss"
             ],
             "scripts": []
           },
