--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"npm run server\" \"ng serve -o\"",
+    "start": "concurrently \"npm run server\" \"ng serve -o --port=8000\"",
     "server": "json-server server/api/db.json --watch",
     "format:fix": "pretty-quick --staged",
     "precommit": "run-s format:fix lint",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.5",
+    "@angular/cli": "^7.0.3",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
